--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
@@ -58,4 +58,10 @@
         <Setter Property="Foreground" Value="{StaticResource HarwareButtonWhiteBrush}" />
         <Setter Property="FontSize" Value="{StaticResource Double20}" />
     </Style>
+    <Style x:Key="RunParamTextStyle" TargetType="TextBlock">
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="Foreground" Value="{StaticResource HarwareButtonWhiteBrush}" />
+        <Setter Property="FontSize" Value="{StaticResource Double20}" />
+    </Style>
 </ResourceDictionary>
