--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -23,13 +23,26 @@
     <system:String x:Key="Axial" xml:space="preserve">轴位</system:String>
     <system:String x:Key="Temperature">温度℃</system:String>
     <system:String x:Key="AxleTemperaturInfoWindow">轴 温 信 息 窗 口</system:String>
+    <system:String x:Key="TemperaturUpInfoWindow">温 升 信 息 窗 口</system:String>
     <system:String x:Key="AmbientTemperature1">环境温度（1）:</system:String>
     <system:String x:Key="AmbientTemperature2">环境温度（2）:</system:String>
     <system:String x:Key="UnitCelsius">单位：℃</system:String>
     <system:String x:Key="Axis">轴</system:String>
     <system:String x:Key="Position">位</system:String>
     <system:String x:Key="AxleTripInfo">开路：’xxx’;短路：’———’;故障：显示红色</system:String>
-
+    <system:String  xml:space="preserve" x:Key="CurrentCar">本&#13;车</system:String>
+    <system:String xml:space="preserve" x:Key="OthertCar">他&#13;车</system:String>
+    <system:String xml:space="preserve" x:Key="DieselEngineSpeed1">柴油机&#13;转速</system:String>
+    <system:String x:Key="RunParam">运 行 参 数</system:String>
+    <system:String x:Key="CurrentCarParam">本 车 运 行 参 数</system:String>
+    <system:String x:Key="OtherCarRunParam">他 车 运 行 参 数</system:String>
+    <system:String x:Key="OilPressureParamFormat" xml:space="preserve">滑油压力      {0}    Kpa</system:String>
+    <system:String x:Key="FuelPressureParamFormat" xml:space="preserve">燃油压力      {0}    Kpa</system:String>
+    <system:String x:Key="CoolingWaterTemperatureParamFormat" xml:space="preserve">冷却水温     {0}    ℃</system:String>
+    <system:String x:Key="OILTEngineOilTemperatureParamFormat" xml:space="preserve">机油温度     {0}    ℃</system:String>
+    <system:String x:Key="PowerTemperatureParamFormat1" xml:space="preserve">功率环温1    {0}    ℃</system:String>
+    <system:String x:Key="PowerTemperatureParamFormat2" xml:space="preserve">功率环温2    {0}    ℃</system:String>
+    <system:String x:Key="BrakePressParamFormat" xml:space="preserve">制动风缸压力  {0}    Kpa</system:String>
 
 
 </ResourceDictionary>
