--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/MainView.xaml
@@ -7,6 +7,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model"
     xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
+    xmlns:regions="http://www.codeplex.com/CompositeWPF"
+    xmlns:constant="clr-namespace:Engine.TCMS.Turkmenistan.Constant"
     d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
     d:DesignHeight="550"
     d:DesignWidth="800"
@@ -22,343 +24,13 @@
                 <RowDefinition Height="200*" />
                 <RowDefinition Height="70*" />
             </Grid.RowDefinitions>
-            <Border
-                Grid.Row="0"
-                Grid.RowSpan="2"
-                Style="{DynamicResource MainBorderStyle}">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="25*" />
-                        <RowDefinition Height="170*" />
-                        <RowDefinition Height="30*" />
-                    </Grid.RowDefinitions>
-                    <Grid Grid.Row="0">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="1*" />
-                            <ColumnDefinition Width="2.5*" />
-                            <ColumnDefinition Width="1*" />
-                            <ColumnDefinition Width="2*" />
-                            <ColumnDefinition Width="1*" />
-                            <ColumnDefinition Width="2*" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock
-                            Grid.Column="0"
-                            Style="{DynamicResource MainTextStyle1}"
-                            Text="{DynamicResource Date}" />
-                        <common:EffectBorder Grid.Column="1" Style="{DynamicResource MainViewBorderStyle2}">
-                            <common:EffectBorder.EffectContent>
-                                <TextBlock Foreground="Wheat" Text="{Binding Model.MainModel.Date}" />
-                            </common:EffectBorder.EffectContent>
-                        </common:EffectBorder>
-                        <TextBlock
-                            Grid.Column="2"
-                            Style="{DynamicResource MainTextStyle1}"
-                            Text="{DynamicResource Time}" />
-                        <common:EffectBorder Grid.Column="3" Style="{DynamicResource MainViewBorderStyle2}">
-                            <common:EffectBorder.EffectContent>
-                                <TextBlock Foreground="Wheat" Text="{Binding Model.MainModel.Time}" />
-                            </common:EffectBorder.EffectContent>
-                        </common:EffectBorder>
-                        <TextBlock
-                            Grid.Column="4"
-                            Style="{DynamicResource MainTextStyle1}"
-                            Text="{DynamicResource WorkState}" />
-                        <common:EffectBorder Grid.Column="5" Style="{DynamicResource MainViewBorderStyle2}">
-                            <common:EffectBorder.EffectContent>
-                                <TextBlock Foreground="Wheat" Text="{Binding Model.MainModel.WorkModel, Converter={StaticResource EnumDescritionConverter}}" />
-                            </common:EffectBorder.EffectContent>
-                        </common:EffectBorder>
-
-                    </Grid>
-                    <Grid Grid.Row="1">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <common:EffectBorder Grid.Column="0" Style="{DynamicResource MainViewBorderStyle}">
-                            <common:EffectBorder.EffectContent>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*" />
-                                        <ColumnDefinition Width="10*" />
-                                        <ColumnDefinition Width="2*" />
-                                    </Grid.ColumnDefinitions>
-                                    <ProgressBar
-                                        Grid.Column="0"
-                                        Maximum="1120"
-                                        Style="{DynamicResource ProgressBarOrdinaryStyle}"
-                                        Value="{Binding Model.MainModel.MasterVoltage}" />
-                                    <ItemsControl
-                                        Grid.Column="1"
-                                        ItemsSource="{Binding Source={x:Static model:TargitDistanceScale112.Instance}, Path=Items}"
-                                        Style="{DynamicResource MainDistanceScalStyle1}" />
-                                    <ItemsControl
-                                        Grid.Column="1"
-                                        ItemsSource="{Binding Source={x:Static model:TargitDistanceScale9.Instance}, Path=Items}"
-                                        Style="{DynamicResource MainDistanceScalStyle2}" />
-                                    <ProgressBar
-                                        Grid.Column="2"
-                                        Maximum="900"
-                                        Style="{DynamicResource ProgressBarOrdinaryStyle}"
-                                        Value="{Binding Model.MainModel.MasterCurrent}" />
-                                </Grid>
-                            </common:EffectBorder.EffectContent>
-                        </common:EffectBorder>
-                        <common:EffectBorder Grid.Column="1" Style="{DynamicResource MainViewBorderStyle}">
-                            <common:EffectBorder.EffectContent>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*" />
-                                        <ColumnDefinition Width="10*" />
-                                        <ColumnDefinition Width="2*" />
-                                    </Grid.ColumnDefinitions>
-                                    <ProgressBar
-                                        Grid.Column="0"
-                                        Maximum="120"
-                                        Style="{DynamicResource ProgressBarOrdinaryStyle}"
-                                        Value="{Binding Model.MainModel.OilPressure}" />
-                                    <ItemsControl
-                                        Grid.Column="1"
-                                        ItemsSource="{Binding Source={x:Static model:TargitDistanceScale1200.Instance}, Path=Items}"
-                                        Style="{DynamicResource MainDistanceScalStyle}" />
-                                    <ProgressBar
-                                        Grid.Column="2"
-                                        Maximum="120"
-                                        Style="{DynamicResource ProgressBarOrdinaryStyle}"
-                                        Value="{Binding Model.MainModel.FuelPressure}" />
-                                </Grid>
-                            </common:EffectBorder.EffectContent>
-
-                        </common:EffectBorder>
-                        <common:EffectBorder Grid.Column="2" Style="{DynamicResource MainViewBorderStyle}">
-                            <common:EffectBorder.EffectContent>
-                                <Grid>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="2*" />
-                                        <ColumnDefinition Width="10*" />
-                                        <ColumnDefinition Width="2*" />
-                                    </Grid.ColumnDefinitions>
-                                    <ProgressBar
-                                        Grid.Column="0"
-                                        Maximum="120"
-                                        Style="{DynamicResource ProgressBarOrdinaryStyle}"
-                                        Value="{Binding Model.MainModel.CoolingWaterTemperature}" />
-                                    <ItemsControl
-                                        Grid.Column="1"
-                                        ItemsSource="{Binding Source={x:Static model:TargitDistanceScale120.Instance}, Path=Items}"
-                                        Style="{DynamicResource MainDistanceScalStyle}" />
-                                    <ProgressBar
-                                        Grid.Column="2"
-                                        Maximum="120"
-                                        Style="{DynamicResource ProgressBarOrdinaryStyle}"
-                                        Value="{Binding Model.MainModel.OILTEngineOilTemperature}" />
-                                </Grid>
-                            </common:EffectBorder.EffectContent>
-                        </common:EffectBorder>
+            <ContentControl Grid.Row="0" Grid.RowSpan="2" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentProgreesbar}"></ContentControl>
+            <ContentControl Grid.Row="2" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentAxleTemperature}"></ContentControl>
 
 
-                    </Grid>
-                    <Grid Grid.Row="2">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="62*" />
-                            <ColumnDefinition Width="44*" />
-                            <ColumnDefinition Width="66*" />
-                            <ColumnDefinition Width="59*" />
-                            <ColumnDefinition Width="49*" />
-                            <ColumnDefinition Width="62*" />
-                            <ColumnDefinition Width="62*" />
-                            <ColumnDefinition Width="40*" />
-                            <ColumnDefinition Width="55*" />
-                            <ColumnDefinition Width="15*" />
-                        </Grid.ColumnDefinitions>
-                        <TextBlock
-                            Grid.Column="0"
-                            Style="{DynamicResource MainTextStyle5}"
-                            Text="{DynamicResource MasterVoltage}" />
-                        <TextBlock
-                            Grid.Column="2"
-                            Style="{DynamicResource MainTextStyle5}"
-                            Text="{DynamicResource MasterVoltage}" />
-                        <TextBlock
-                            Grid.Column="3"
-                            Style="{DynamicResource MainTextStyle5}"
-                            Text="{DynamicResource OilPressure}" />
-                        <TextBlock
-                            Grid.Column="5"
-                            Style="{DynamicResource MainTextStyle5}"
-                            Text="{DynamicResource FuelPressure}" />
-                        <TextBlock
-                            Grid.Column="6"
-                            Style="{DynamicResource MainTextStyle5}"
-                            Text="{DynamicResource CoolingWaterTemperature}" />
-                        <TextBlock
-                            Grid.Column="8"
-                            Style="{DynamicResource MainTextStyle5}"
-                            Text="{DynamicResource OILTEngineOilTemperature}" />
-                    </Grid>
-                </Grid>
-            </Border>
-            <Border Grid.Row="2" Style="{DynamicResource MainBorderStyle}">
-                <Grid>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="50*" />
-                        <ColumnDefinition Width="300*" />
-                        <ColumnDefinition Width="50*" />
-                        <ColumnDefinition Width="120*" />
-                    </Grid.ColumnDefinitions>
-                    <Grid Grid.Column="0">
-                        <Grid.RowDefinitions>
-                            <RowDefinition />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
-                        <common:EffectBorder
-                            Width="20"
-                            Height="20"
-                            Margin="5,5"
-                            HorizontalAlignment="Right"
-                            VerticalAlignment="Bottom"
-                            Background="Red"
-                            Style="{DynamicResource MainViewBorderStyle2}" />
-                        <TextBlock
-                            Grid.Row="1"
-                            Style="{DynamicResource MainTextStyle6}"
-                            Text="{DynamicResource FaultInfo}" />
-                    </Grid>
-                    <Border Grid.Column="1" Style="{DynamicResource MainBorderStyle2}" />
-                    <Grid Grid.Column="2">
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="40*" />
-                            <RowDefinition Height="120*" />
-                        </Grid.RowDefinitions>
-                        <TextBlock
-                            Grid.Row="1"
-                            Style="{DynamicResource MainTextStyle1}"
-                            Text="{DynamicResource AxleTemperature}" />
-                    </Grid>
-                    <Grid Grid.Column="3">
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition />
-                            <ColumnDefinition />
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="40*" />
-                            <RowDefinition Height="120*" />
-                        </Grid.RowDefinitions>
-                        <Border
-                            Grid.Row="1"
-                            Grid.Column="0"
-                            Grid.ColumnSpan="2"
-                            Style="{DynamicResource MainBorderStyle2}" />
-                        <TextBlock
-                            Grid.Row="0"
-                            Grid.Column="0"
-                            Style="{DynamicResource MainTextStyle6}"
-                            Text="{DynamicResource Axial}" />
-                        <TextBlock
-                            Grid.Row="0"
-                            Grid.Column="1"
-                            Style="{DynamicResource MainTextStyle6}"
-                            Text="{DynamicResource Temperature}" />
-                    </Grid>
-                </Grid>
-            </Border>
 
         </Grid>
-        <Border Grid.Column="1" Style="{DynamicResource MainBorderStyle}">
-            <Grid>
-                <Grid.RowDefinitions>
-                    <RowDefinition Height="70*" />
-                    <RowDefinition Height="480*" />
-                </Grid.RowDefinitions>
-                <Grid Grid.Row="0" Margin="2,5">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition />
-                        <ColumnDefinition />
-                    </Grid.ColumnDefinitions>
-                    <Grid.RowDefinitions>
-                        <RowDefinition />
-                        <RowDefinition />
-                    </Grid.RowDefinitions>
-                    <TextBlock
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Style="{DynamicResource MainTextStyle2}"
-                        Text="{DynamicResource EngineSpeed}" />
-                    <TextBlock
-                        Grid.Row="1"
-                        Grid.Column="0"
-                        Style="{DynamicResource MainTextStyle2}"
-                        Text="{DynamicResource DieselEngineSpeed}" />
-                    <common:EffectBorder
-                        Grid.Row="0"
-                        Grid.RowSpan="2"
-                        Grid.Column="1"
-                        Background="{DynamicResource BackgroudBrush}"
-                        Style="{DynamicResource MainViewBorderStyle2}">
-
-                        <common:EffectBorder.EffectContent>
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition />
-                                    <RowDefinition />
-                                </Grid.RowDefinitions>
-                                <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="1*" />
-                                    <ColumnDefinition Width="1*" />
-                                </Grid.ColumnDefinitions>
-                                <TextBlock
-                                    Grid.Row="0"
-                                    Grid.Column="0"
-                                    Style="{DynamicResource MainTextStyle3}"
-                                    Text="{Binding Model.MainModel.EngineSpeed, StringFormat={}{0:F0}}" />
-                                <TextBlock
-                                    Grid.Row="1"
-                                    Grid.Column="0"
-                                    Style="{DynamicResource MainTextStyle3}"
-                                    Text="{Binding Model.MainModel.DieselEngineSpeed, StringFormat={}{0:F0}}" />
-                                <TextBlock
-                                    Grid.Row="0"
-                                    Grid.Column="1"
-                                    Style="{DynamicResource MainTextStyle4}"
-                                    Text="km/h" />
-                                <TextBlock
-                                    Grid.Row="1"
-                                    Grid.Column="1"
-                                    Style="{DynamicResource MainTextStyle4}"
-                                    Text="r/min" />
-                            </Grid>
-                        </common:EffectBorder.EffectContent>
-                    </common:EffectBorder>
-                </Grid>
-                <Border
-                    Grid.Row="1"
-                    Margin="5"
-                    Background="{DynamicResource BackgroudBrush}"
-                    BorderBrush="DarkGray"
-                    BorderThickness="2">
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="40" />
-                            <RowDefinition />
-                        </Grid.RowDefinitions>
-                        <Border
-                            Background="{DynamicResource ContentDeepSkyBlueBrush}"
-                            BorderBrush="DarkGray"
-                            BorderThickness="0,0,0,2">
-                            <TextBlock
-                                HorizontalAlignment="Center"
-                                VerticalAlignment="Center"
-                                FontSize="{DynamicResource Double20}"
-                                Foreground="White"
-                                Text="运 行 参 数" />
-                        </Border>
-                    </Grid>
-                </Border>
-
-
-            </Grid>
-        </Border>
+        <ContentControl Grid.Column="1" regions:RegionManager.RegionName="{x:Static constant:RegionNames.ContentRunParam}"></ContentControl>
 
     </Grid>
 </UserControl>
