1.添加切除查询，故障切除界面

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Base/TurkmenistanBaseResource.xaml
@@ -37,7 +37,8 @@
     <system:Double x:Key="Double18">18</system:Double>
 
     <system:Double x:Key="Double16">16</system:Double>
-
+    <system:Double x:Key="Double14">14</system:Double>
+    <system:Double x:Key="Double12">12</system:Double>
 
     <system:String x:Key="OilPressureParamFormat" xml:space="preserve">滑油压力      {0}    Kpa</system:String>
     <system:String x:Key="FuelPressureParamFormat" xml:space="preserve">燃油压力      {0}    Kpa</system:String>
