--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Text/StringResource-ch.xaml
@@ -41,7 +41,29 @@
     <system:String x:Key="DieselEngineNoLoadTotalTime">柴油机空载时间累计：</system:String>
     <system:String x:Key="DieselEngineTractionTotalTime">柴油机牵引时间累计：</system:String>
     <system:String x:Key="DieselEngineResistanceBrakeTotalTime">柴油机电阻制动时间累计：</system:String>
+    <system:String x:Key="OneBit">1位：</system:String>
+    <system:String x:Key="TwoBit">2位：</system:String>
+    <system:String x:Key="ThreeBit">3位：</system:String>
+    <system:String x:Key="FourBit">4位：</system:String>
+    <system:String x:Key="FiveBit">5位：</system:String>
+    <system:String x:Key="SixBit">6位：</system:String>
+    <system:String x:Key="SeventBit">7位：</system:String>
+    <system:String x:Key="EightBit">8位：</system:String>
+    <system:String x:Key="NineOneBit">9位：</system:String>
+    <system:String x:Key="TenBit">10位：</system:String>
+    <system:String x:Key="ElevenBit">11位：</system:String>
+    <system:String x:Key="TwelveBit">12位：</system:String>
+    <system:String x:Key="ThirteenBit">13位：</system:String>
+    <system:String x:Key="ForteenBit">14位：</system:String>
+    <system:String x:Key="FiveteenBit">15位：</system:String>
+    <system:String x:Key="SixteenBit">16位：</system:String>
+    <system:String x:Key="PrimaryPowerBase">主发功率基准:</system:String>
+    <system:String x:Key="MainHandlePosition">主手柄位置:</system:String>
+    <system:String x:Key="EnergyConsumptionInTactionCondition">牵引工况耗能:</system:String>
+    <system:String x:Key="Voltage">电压：</system:String>
+    <system:String x:Key="ResistanceBrakeEnergy">电阻制动能耗：</system:String>
 
+    <system:String x:Key="FaultCutSelect">故障切除选择:</system:String>
 
 
 </ResourceDictionary>
