--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/FaultCutView.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/View/Contents/FaultCutView.xaml
@@ -4,12 +4,69 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:viewModel="clr-namespace:Engine.TCMS.Turkmenistan.ViewModel"
+             xmlns:model="clr-namespace:Engine.TCMS.Turkmenistan.Model"
              d:DataContext="{d:DesignInstance viewModel:DomainViewModel}"
              d:DesignHeight="550"
              d:DesignWidth="800"
              mc:Ignorable="d">
-    
+
     <Grid>
-            
+        <Border Background="#737C7E" Margin="120,40,120,460">
+            <Border BorderBrush="White" BorderThickness="1" Margin="4">
+                <Border BorderBrush="White" BorderThickness="1" Margin="2">
+                    <TextBlock Text="{DynamicResource FaultCutSelect}" Foreground="Black" FontSize="{StaticResource Double18}" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                </Border>
+            </Border>
+        </Border>
+        <ListBox Margin="100,150,100,50" ItemsSource="{Binding Model.FaultCutModel.AllUnit}" SelectedItem="{Binding Model.FaultCutModel.SelectItem,Mode=TwoWay,NotifyOnSourceUpdated=True,NotifyOnTargetUpdated=True}">
+            <ListBox.Style>
+                <Style TargetType="ListBox">
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="ListBox">
+                                <ItemsPresenter></ItemsPresenter>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="ItemContainerStyle">
+                        <Setter.Value>
+                            <Style TargetType="ListBoxItem">
+                                <Setter Property="Template">
+                                    <Setter.Value>
+                                        <ControlTemplate TargetType="ListBoxItem">
+                                            <ContentPresenter></ContentPresenter>
+                                            <ControlTemplate.Triggers>
+                                                <Trigger Property="IsSelected" Value="True">
+                                                    <Setter Property="Background" Value="#A6A3A2"></Setter>
+                                                </Trigger>
+                                            </ControlTemplate.Triggers>
+                                        </ControlTemplate>
+                                    </Setter.Value>
+                                </Setter>
+                            </Style>
+                        </Setter.Value>
+                    </Setter>
+                    <Setter Property="ItemTemplate">
+                        <Setter.Value>
+                            <DataTemplate DataType="model:FaultCutUnit">
+                                <Grid Margin="3" Height="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType=ListBox},Path=ActualHeight,Converter={StaticResource MathConverter},ConverterParameter=x/6-6}">
+                                    <Border Padding="10,0" Panel.ZIndex="10" x:Name="PartBorder" Margin="0,0,10,10" Background="Orange">
+                                        <TextBlock FontSize="{StaticResource Double18}" Text="{Binding DispalyText}" Foreground="Black" VerticalAlignment="Center" Background="{Binding RelativeSource={RelativeSource FindAncestor,AncestorType=ListBoxItem},Path=Background}"></TextBlock>
+                                    </Border>
+
+                                    <Border Margin="10,10,0,0" Background="#454F56"></Border>
+                                </Grid>
+                                <DataTemplate.Triggers>
+                                    <DataTrigger Binding="{Binding IsCut}" Value="True">
+
+                                        <Setter TargetName="PartBorder" Property="Background" Value="#CA82C0"></Setter>
+                                    </DataTrigger>
+                                </DataTemplate.Triggers>
+                            </DataTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListBox.Style>
+        </ListBox>
     </Grid>
 </UserControl>
