--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Styles/TurkmenistanTextStyles.xaml
@@ -76,4 +76,22 @@
         <Setter Property="VerticalAlignment" Value="Center" />
         <Setter Property="FontSize" Value="{StaticResource Double16}" />
     </Style>
+    <Style x:Key="CutSerchViewTextStyle3" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="LimeGreen" />
+        <Setter Property="HorizontalAlignment" Value="Left" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="{StaticResource Double16}" />
+    </Style>
+    <Style x:Key="CutSerchViewTextStyle4" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="HorizontalAlignment" Value="Right" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="{StaticResource Double16}" />
+    </Style>
+    <Style x:Key="CutSerchViewTextStyle5" TargetType="TextBlock">
+        <Setter Property="Foreground" Value="White" />
+        <Setter Property="HorizontalAlignment" Value="Right" />
+        <Setter Property="VerticalAlignment" Value="Center" />
+        <Setter Property="FontSize" Value="{StaticResource Double16}" />
+    </Style>
 </ResourceDictionary>
